Modified keywords and properties

--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=LiquidCrystalMenu_I2C
 version=1.0.0
 author=Alejandro Kölbl
 maintainer=Alejandro Kölbl
-sentence=A class to manage a menu for a Liquid Crystal through I2C.
-paragraph= 
+sentence=Contains a class to parametrize and control a menu for a Liquid Crystal display through I2C.
+paragraph=After initializing the object `DisplayMenu` with its parameters, the `begin` method must be called once to start the display. Then, a call to the `action` method must be done cyclically in a loop. This method is used to traverse the menu with a cursor and edit parameters given the action passed as an argument. This action must be present for one cycle only to take effect. The possible actions are defined in the `eMenuAction` enumeration. In the declaration of the `DisplayMenu` object an array of data type `sRowData` must be passed, apart from other parameters. This array contains the rows in order and all the information that will be displayed. Each row can be of a different type defined by the `eRowType` enumeration. The different type of rows allow to show/edit numbers or lists and execute user defined events (functions). Also, another methods (`update_row`, `update_value` and `update_extended`) allow to force an update on the displayed data in the case a parameter of a row is changed.
 category=Display
 url=https://github.com/Alek1414/LiquidCrystalMenu_I2C
 architectures=avr
